# breeze

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  azure-pipelines.yml  docker-compose.debug.yml  docker-compose.yml  requirements.txt  setup.cfg  setup.py  wsgi.py
.github/: auto-merge.yml  pull_request_template.md
.github/workflows/: codeql.yml  coverage.yaml  coverage.yml  docker.yml  tests.yaml  tests.yml
artwork/: LICENSE.md
breeze/: __init__.py  auth.py  config.py  create_app.py  database.py  exc.py  exceptions.py  forms.py  models.py  utils.py
breeze/auth/: __init__.py  auth.py  oauth2.py
breeze/blueprints/: auth.py  callback.py  comments.py  index.py  posts.py
breeze/static/css/: auth.css
breeze/templates/: base.html  index.html
breeze/templates/auth/: login.html  register.html  user.html
breeze/templates/posts/: new.html  show.html
docs/: api.rst  auth.rst  changelog.md  conf.py  config.rst  index.md  requirements.txt  todo.md
frontend/templates/: base.html  index.html
frontend/templates/auth/: login.html  register.html  user.html
frontend/templates/comments/: new.html
frontend/templates/errors/: 404.html  405.html
frontend/templates/posts/: new.html  show.html
tests/: __init__.py  conftest.py  load_test.py  test_auth.py  test_blueprints_auth.py  test_blueprints_comments.py  test_blueprints_index.py  test_blueprints_posts.py  test_breeze.py  test_exceptions.py  test_models.py  test_oauth2.py  test_utils.py
