[metadata]
name = breeze
version = attr: breeze.__version__
url = https://github.com/mmdbalkhi/breeze/
project_urls =
    Documentation = https://breeze.readthedocs.io/
    Source Code = https://github.com/mmdbalkhi/breeze
    Issue Tracker = https://github.com/mmdbalkhi/breeze/issues/
license = MIT
author = mmdbalkhi
author_email = ahmdparsh129@gmail.com
description = a flask application similar to Twitter just for fun!
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = breeze
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = breeze

[egg_info]
tag_build =
tag_date = 1

[aliases]
release = egg_info -Db ''

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    breeze
    tests

[coverage:paths]
source =
    breeze
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 90
per-file-ignores =
    # __init__ exports names
    breeze/__init__.py: F401
    breeze/config.py: B950
